docs: Add documentation for Update
