# handlers/response.go
@@ -49,3 +49,8 @@ type ListOpeningsResponse struct {
 	Message string                  `json:"message"`
 	Data    []schemas.OpeningResponse `json:"data"`
 }
+
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
